test/compile-fail/var__simple.he
fn main
{
    a;      //~ ERROR 3005

    def b = { x: int, y: int }
    b;      //~ ERROR 3005

    ret 0;
}
